TelaSecretario teste commit

--- a/src/view/FormSecretario.form
+++ b/src/view/FormSecretario.form
@@ -77,7 +77,7 @@
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value="SECRET&#xc1;RIO"/>
+                <Property name="text" type="java.lang.String" value="SECRETa&#xc1;RIO"/>
               </Properties>
             </Component>
           </SubComponents>
