--- a/src/view/FormSecretario.form
+++ b/src/view/FormSecretario.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
+<Form version="1.8" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="undecorated" type="boolean" value="true"/>
@@ -348,7 +348,7 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
-                          <Component id="mGradientPanel1" min="-2" pref="120" max="-2" attributes="0"/>
+                          <Component id="profileImagePanel" min="-2" pref="120" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                           <Component id="mTextField2" min="-2" pref="408" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
@@ -369,7 +369,7 @@
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="mTextField2" min="-2" pref="57" max="-2" attributes="0"/>
-                              <Component id="mGradientPanel1" min="-2" pref="120" max="-2" attributes="0"/>
+                              <Component id="profileImagePanel" min="-2" pref="120" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace pref="221" max="32767" attributes="0"/>
                           <Component id="mButton2" min="-2" pref="50" max="-2" attributes="0"/>
@@ -472,7 +472,7 @@
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mButton5ActionPerformed"/>
                   </Events>
                 </Component>
-                <Container class="com.hq.swingmaterialdesign.materialdesign.MGradientPanel" name="mGradientPanel1">
+                <Container class="com.hq.swingmaterialdesign.materialdesign.MGradientPanel" name="profileImagePanel">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
@@ -480,10 +480,9 @@
                     <Property name="borderRadius" type="int" value="120"/>
                     <Property name="fillBackground" type="boolean" value="false"/>
                     <Property name="fillImage" type="boolean" value="true"/>
-                    <Property name="imagePath" type="java.lang.String" value="/view/images/profileImageHover.png"/>
                   </Properties>
                   <Events>
-                    <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="mGradientPanel1MouseEntered"/>
+                    <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="profileImagePanelMouseEntered"/>
                   </Events>
 
                   <Layout>
@@ -506,6 +505,7 @@
                         </Property>
                       </Properties>
                       <Events>
+                        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel2MouseClicked"/>
                         <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel2MouseEntered"/>
                         <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel2MouseExited"/>
                       </Events>
