--- a/src/view/FormSecretario.form
+++ b/src/view/FormSecretario.form
@@ -482,6 +482,9 @@
                 </Container>
                 <Component class="com.hq.swingmaterialdesign.materialdesign.MTextField" name="txtNome">
                   <Properties>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Nunito" size="16" style="0"/>
+                    </Property>
                     <Property name="label" type="java.lang.String" value="Nome"/>
                   </Properties>
                 </Component>
