CRUD Secretário e Treinador (Completo)

--- a/src/view/FormTreinador.form
+++ b/src/view/FormTreinador.form
@@ -65,7 +65,7 @@
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value="SECRET&#xc1;RIO"/>
+                <Property name="text" type="java.lang.String" value="TREINADOR"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -306,7 +306,7 @@
 
                   <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
                   <SubComponents>
-                    <Component class="javax.swing.JTable" name="tableSecretarios">
+                    <Component class="javax.swing.JTable" name="tableTreinadores">
                       <Properties>
                         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                           <Border info="org.netbeans.modules.form.compat2.border.EmptyBorderInfo">
@@ -323,7 +323,7 @@
                           <Table columnCount="4" rowCount="0">
                             <Column editable="false" title="C&#xf3;digo" type="java.lang.Object"/>
                             <Column editable="false" title="Nome" type="java.lang.Object"/>
-                            <Column editable="false" title="Setor" type="java.lang.Object"/>
+                            <Column editable="false" title="Especialidade" type="java.lang.Object"/>
                             <Column editable="false" title="Hor&#xe1;rio" type="java.lang.Object"/>
                           </Table>
                         </Property>
@@ -366,7 +366,7 @@
                         </Property>
                       </Properties>
                       <AuxValues>
-                        <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="tableSecretarios.getTableHeader().setFont(new java.awt.Font(&quot;Nunito Bold&quot;, 0, 14));"/>
+                        <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="tableTreinadores.getTableHeader().setFont(new java.awt.Font(&quot;Nunito Bold&quot;, 0, 14));"/>
                       </AuxValues>
                     </Component>
                   </SubComponents>
@@ -468,11 +468,11 @@
                                           </Group>
                                       </Group>
                                   </Group>
-                                  <Group type="103" alignment="1" groupAlignment="0" max="-2" attributes="0">
+                                  <Group type="103" alignment="1" groupAlignment="0" attributes="0">
                                       <Group type="102" attributes="0">
-                                          <Component id="comboSetor" min="-2" pref="246" max="-2" attributes="0"/>
+                                          <Component id="txtEspecialidade" min="-2" pref="246" max="-2" attributes="0"/>
                                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                                          <Component id="compoTipo" max="32767" attributes="0"/>
+                                          <Component id="txtCref" min="-2" pref="239" max="-2" attributes="0"/>
                                       </Group>
                                       <Group type="102" attributes="0">
                                           <Component id="txtLogin" min="-2" pref="191" max="-2" attributes="0"/>
@@ -528,17 +528,17 @@
                               <Component id="txtLogin" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="compoTipo" min="-2" pref="44" max="-2" attributes="0"/>
-                              <Component id="comboSetor" min="-2" pref="44" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="txtEspecialidade" pref="44" max="32767" attributes="0"/>
+                              <Component id="txtCref" max="32767" attributes="0"/>
                           </Group>
-                          <EmptySpace max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="txtEntrada" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
                               <Component id="txtSaida" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
                               <Component id="txtSalario" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="37" max="32767" attributes="0"/>
+                          <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="botConfirmar" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
                               <Component id="botCancelar" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
@@ -784,7 +784,7 @@
                     <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new LimitTextfield(50)"/>
                   </AuxValues>
                 </Component>
-                <Component class="com.hq.swingmaterialdesign.materialdesign.MComboBox" name="comboSetor">
+                <Component class="com.hq.swingmaterialdesign.materialdesign.MComboBox" name="txtEspecialidade">
                   <Properties>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                       <StringArray count="4">
@@ -792,16 +792,6 @@
                         <StringItem index="1" value="Almoxarifado"/>
                         <StringItem index="2" value="Financeiro"/>
                         <StringItem index="3" value="Recursos Humanos"/>
-                      </StringArray>
-                    </Property>
-                  </Properties>
-                </Component>
-                <Component class="com.hq.swingmaterialdesign.materialdesign.MComboBox" name="compoTipo">
-                  <Properties>
-                    <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                      <StringArray count="2">
-                        <StringItem index="0" value="Acesso Comum"/>
-                        <StringItem index="1" value="Acesso Especial"/>
                       </StringArray>
                     </Property>
                   </Properties>
@@ -829,6 +819,14 @@
                     </Property>
                     <Property name="label" type="java.lang.String" value="Salario"/>
                   </Properties>
+                </Component>
+                <Component class="com.hq.swingmaterialdesign.materialdesign.MTextField" name="txtCref">
+                  <Properties>
+                    <Property name="label" type="java.lang.String" value="CREF"/>
+                  </Properties>
+                  <AuxValues>
+                    <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new LimitTextfield(11)"/>
+                  </AuxValues>
                 </Component>
               </SubComponents>
             </Container>
