--- a/src/view/FormTreinador.form
+++ b/src/view/FormTreinador.form
@@ -699,6 +699,12 @@
                   <Properties>
                     <Property name="label" type="java.lang.String" value="Numero"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtNumeroKeyTyped"/>
+                  </Events>
+                  <AuxValues>
+                    <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new LimitTextfield(5)"/>
+                  </AuxValues>
                 </Component>
                 <Component class="com.hq.swingmaterialdesign.materialdesign.MTextField" name="txtCidade">
                   <Properties>
